# AI_Chip_Trading_Signals

./: .gitignore  FEATURE_01_COMPLETION_REPORT.md  FEATURE_02_COMPLETION_REPORT.md  FEATURE_03_COMPLETION_REPORT.md  FEATURE_04_COMPLETION_REPORT.md  FEATURE_05_COMPLETION_REPORT.md  FEATURE_06_COMPLETION_REPORT.md  LAUNCH_GUIDE.md  PROJECT_STATUS_SUMMARY.md  README.md  bond_stress_scheduler.py  csv_signal_tracker.py  dictionary.md  feature_02_completion_report.py  feature_05_verification.py  fix_historical_data.py  pyproject.toml  setup.py  start_backend.py  test_discord_integration.py  verify_imports.py
.github/instructions/: instructions.instructions.md
.github/prompts/: execute_tasks_prompt.md  features.md  prompts.prompt.md
archive/development_files/: LAUNCH_GUIDE.md  WORKSPACE_CLEANUP.md  WORKSPACE_CLEAN_STATUS.md  comprehensive_feature_test.py  honest_audit.py
backend/: .env.example  requirements.txt  start_backend.sh
backend/src/: __init__.py  main.py
docs/: NOTIFICATION_SETUP.md  README_FEATURE_01.md  README_FEATURE_02.md
docs/features/: 01-bond-stress-monitoring-tasks.md  02-signal-generation-tasks.md  03-nextjs-dashboard-tasks.md  04-notification-system-tasks.md  05-historical-analysis-tasks.md  06-signal-drill-down-tasks.md  07-risk-management-tasks.md  08-mobile-interface-tasks.md  09-data-pipeline-monitoring-tasks.md  10-sector-rotation-tasks.md
notebooks/: feature_05_comprehensive_analysis.ipynb  feature_05_executed.ipynb  feature_05_historical_analysis_comprehensive.ipynb
recession_tracker/: README.md  package-lock.json  package.json
(+67 files in other folders)
